# Mazzotta_RT2_Lab1

./: .gitignore  README.md  start.sh
src/: bme_gazebo_sensors
src/navigation_action_server/: CMakeLists.txt  package.xml
src/navigation_action_server/launch/: launch  navigation_launch.py
src/navigation_action_server/src/: nav_action_client.cpp  nav_action_server.cpp
src/navigation_interfaces/: CMakeLists.txt  package.xml
src/navigation_interfaces/action/: Navigate.action
